--- a/src/main/resources/templates/business/add.html
+++ b/src/main/resources/templates/business/add.html
@@ -2,144 +2,161 @@
 <!-- saved from url=(0052)http://getbootstrap.com/docs/4.0/examples/dashboard/ -->
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="description" content="">
-		<meta name="author" content="">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-		<title>企业信息操作</title>
-		<!-- Bootstrap core CSS -->
-		<link href="asserts/css/bootstrap.min.css" th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap.css}" rel="stylesheet">
+    <title>企业信息操作</title>
+    <!-- Bootstrap core CSS -->
+    <link href="asserts/css/bootstrap.min.css" th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap.css}" rel="stylesheet">
 
-		<!-- Custom styles for this template -->
-		<link href="asserts/css/dashboard.css" th:href="@{/asserts/css/dashboard.css}" rel="stylesheet">
-		<style type="text/css">
-			/* Chart.js */
-			
-			@-webkit-keyframes chartjs-render-animation {
-				from {
-					opacity: 0.99
-				}
-				to {
-					opacity: 1
-				}
-			}
-			
-			@keyframes chartjs-render-animation {
-				from {
-					opacity: 0.99
-				}
-				to {
-					opacity: 1
-				}
-			}
-			
-			.chartjs-render-monitor {
-				-webkit-animation: chartjs-render-animation 0.001s;
-				animation: chartjs-render-animation 0.001s;
-			}
-		</style>
-	</head>
+    <!-- Custom styles for this template -->
+    <link href="asserts/css/dashboard.css" th:href="@{/asserts/css/dashboard.css}" rel="stylesheet">
+    <style type="text/css">
+        /* Chart.js */
 
-	<body>
-		<!--引入抽取的topbar-->
-		<!--模板名：会使用thymeleaf的前后缀配置规则进行解析-->
-		<div th:replace="commons/bar::topbar"></div>
+        @-webkit-keyframes chartjs-render-animation {
+            from {
+                opacity: 0.99
+            }
+            to {
+                opacity: 1
+            }
+        }
 
-		<div class="container-fluid">
-			<div class="row">
-				<!--引入侧边栏-->
-				<div th:replace="commons/bar::#sidebar(activeUri='businesses')"></div>
+        @keyframes chartjs-render-animation {
+            from {
+                opacity: 0.99
+            }
+            to {
+                opacity: 1
+            }
+        }
 
-				<main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-					<!--需要区分是修改还是添加；-->
-					<form th:action="@{/business}" method="post">
-						<!--发送put请求修改员工数据-->
-						<!--
-						1、SpringMVC中配置HiddenHttpMethodFilter;（SpringBoot自动配置好的）
-						2、页面创建一个post表单
-						3、创建一个input项，name="_method";值就是我们指定的请求方式
-						-->
-						<input type="hidden" name="_method" value="put" th:if="${business!=null}"/>
-						<input type="hidden" name="id" th:if="${business!=null}" th:value="${business.id}">
-						<div class="form-group">
-							<label>企业名字</label>
-							<input name="name" type="text" class="form-control col-md-4" placeholder="在此输入企业名字" th:value="${business!= null}?${business.name}">
-						</div>
-						<div class="form-group">
-							<label>成立时长</label>
-							<input name="age" type="text" class="form-control col-md-4" placeholder="在此输入企业成立时长" th:value="${business!= null}?${business.age}">
-						</div>
-						<div class="form-group">
-							<label>企业联系电话</label>
-							<input name="phone" type="text" class="form-control col-md-4" placeholder="在此输入企业联系电话" th:value="${business!= null}?${business.phone}">
-						</div>
-						<div class="form-group">
-							<label>Email</label>
-							<input name="email" type="email" class="form-control col-md-4" placeholder="邮箱示例:zhangsan@kingstar.com" th:value="${business!= null}?${business.email}">
-						</div>
-						<div class="form-group">
-							<label>法人身份证</label>
-							<input name="idCard" type="text" class="form-control col-md-4" placeholder="在此输入法人身份证信息" th:value="${business!= null}?${business.idCard}">
-						</div>
-						<div class="form-group">
-							<label>企业所属国</label>
-							<input name="nationality" type="text" class="form-control col-md-4" placeholder="示例:日本" th:value="${business!= null}?${business.nationality}">
-						</div>
-						<div class="form-group">
-							<label>母公司所属城市</label>
-							<input name="nation" type="text" class="form-control col-md-4" placeholder="示例:大阪" th:value="${business!= null}?${business.nation}">
-						</div>
-						<div class="form-group">
-							<label>是否上市</label><br/>
-							<div class="form-check form-check-inline">
-								<input class="form-check-input" type="radio" name="trade"  value="1" th:checked="${business!= null}?${business.trade==1}">
-								<label class="form-check-label">已上市</label>
-							</div>
-							<div class="form-check form-check-inline">
-								<input class="form-check-input" type="radio" name="trade"  value="0" th:checked="${business!= null}?${business.trade==0}">
-								<label class="form-check-label">未上市</label>
-							</div>
-						</div>
+        .chartjs-render-monitor {
+            -webkit-animation: chartjs-render-animation 0.001s;
+            animation: chartjs-render-animation 0.001s;
+        }
+    </style>
+</head>
 
-						<div class="form-group">
-							<label>企业性质</label>
-							<select class="form-control col-md-4" name="kind">
-								<option th:selected="${business!= null}?${business.kind} == ${businesskind.name}" th:each="businesskind:${businesskinds}" th:text="${businesskind.name}"></option>
-							</select>
-						</div>
-						<div class="form-group">
-							<label>企业地址</label>
-							<input name="location" type="text" class="form-control col-md-4" placeholder="在此输入企业详细地址" th:value="${business!= null}?${business.location}">
-						</div>
-						<div class="form-group">
-							<label>招聘职位</label>
-							<input name="job" type="text" class="form-control col-md-4" placeholder="在此输入招聘的职位" th:value="${business!= null}?${business.job}">
-						</div>
-						<div class="form-group">
-							<label>职位描述</label>
-							<input name="jobDescribe" type="text" class="form-control col-md-4" placeholder="在此输入职位描述,如福利待遇等" th:value="${business!= null}?${business.jobDescribe}">
-						</div>
-						<button type="submit" class="btn btn-primary" th:text="${business!=null}?'修改':'添加'">添加</button>
-					</form>
-				</main>
-			</div>
-		</div>
+<body>
+<!--引入抽取的topbar-->
+<!--模板名：会使用thymeleaf的前后缀配置规则进行解析-->
+<div th:replace="commons/bar::topbar"></div>
 
-		<!-- Bootstrap core JavaScript
-    ================================================== -->
-		<!-- Placed at the end of the document so the pages load faster -->
-		<script type="text/javascript" src="asserts/js/jquery-3.2.1.slim.min.js" th:src="@{/webjars/jquery/3.3.1/jquery.js}"></script>
-		<script type="text/javascript" src="asserts/js/popper.min.js" th:src="@{/webjars/popper.js/1.11.1/dist/popper.js}"></script>
-		<script type="text/javascript" src="asserts/js/bootstrap.min.js" th:src="@{/webjars/bootstrap/4.0.0/js/bootstrap.js}"></script>
+<div class="container-fluid">
+    <div class="row">
+        <!--引入侧边栏-->
+        <div th:replace="commons/bar::#sidebar(activeUri='businesses')"></div>
 
-		<!-- Icons -->
-		<script type="text/javascript" src="asserts/js/feather.min.js" th:src="@{/asserts/js/feather.min.js}"></script>
-		<script>
-			feather.replace()
-		</script>
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
+            <!--需要区分是修改还是添加；-->
+            <form th:action="@{/business}" method="post">
+                <!--发送put请求修改员工数据-->
+                <!--
+                1、SpringMVC中配置HiddenHttpMethodFilter;（SpringBoot自动配置好的）
+                2、页面创建一个post表单
+                3、创建一个input项，name="_method";值就是我们指定的请求方式
+                -->
+                <input type="hidden" name="_method" value="put" th:if="${business!=null}"/>
+                <input type="hidden" name="id" th:if="${business!=null}" th:value="${business.id}">
+                <div class="form-group">
+                    <label>企业名字</label>
+                    <input name="name" type="text" class="form-control col-md-4" placeholder="在此输入企业名字"
+                           th:value="${business!= null}?${business.name}">
+                </div>
+                <div class="form-group">
+                    <label>成立时长</label>
+                    <input name="age" type="text" class="form-control col-md-4" placeholder="在此输入企业成立时长"
+                           th:value="${business!= null}?${business.age}">
+                </div>
+                <div class="form-group">
+                    <label>企业联系电话</label>
+                    <input name="phone" type="text" class="form-control col-md-4" placeholder="在此输入企业联系电话"
+                           th:value="${business!= null}?${business.phone}">
+                </div>
+                <div class="form-group">
+                    <label>Email</label>
+                    <input name="email" type="email" class="form-control col-md-4"
+                           placeholder="邮箱示例:zhangsan@kingstar.com" th:value="${business!= null}?${business.email}">
+                </div>
+                <div class="form-group">
+                    <label>法人身份证</label>
+                    <input name="idCard" type="text" class="form-control col-md-4" placeholder="在此输入法人身份证信息"
+                           th:value="${business!= null}?${business.idCard}">
+                </div>
+                <div class="form-group">
+                    <label>企业所属国</label>
+                    <input name="nationality" type="text" class="form-control col-md-4" placeholder="示例:日本"
+                           th:value="${business!= null}?${business.nationality}">
+                </div>
+                <div class="form-group">
+                    <label>母公司所属城市</label>
+                    <input name="nation" type="text" class="form-control col-md-4" placeholder="示例:大阪"
+                           th:value="${business!= null}?${business.nation}">
+                </div>
+                <div class="form-group">
+                    <label>是否上市</label><br/>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="trade" value="1"
+                               th:checked="${business!= null}?${business.trade==1}">
+                        <label class="form-check-label">已上市</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="trade" value="0"
+                               th:checked="${business!= null}?${business.trade==0}">
+                        <label class="form-check-label">未上市</label>
+                    </div>
+                </div>
 
-	</body>
+                <div class="form-group">
+                    <label>企业性质</label>
+                    <select class="form-control col-md-4" name="kind">
+                        <option th:selected="${business!= null}?${business.kind} == ${businesskind.name}"
+                                th:each="businesskind:${businesskinds}" th:text="${businesskind.name}"></option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label>企业地址</label>
+                    <input name="location" type="text" class="form-control col-md-4" placeholder="在此输入企业详细地址"
+                           th:value="${business!= null}?${business.location}">
+                </div>
+                <div class="form-group">
+                    <label>招聘职位</label>
+                    <input name="job" type="text" class="form-control col-md-4" placeholder="在此输入招聘的职位"
+                           th:value="${business!= null}?${business.job}">
+                </div>
+                <div class="form-group">
+                    <label>职位描述</label>
+                    <input name="jobDescribe" type="text" class="form-control col-md-4" placeholder="在此输入职位描述,如福利待遇等"
+                           th:value="${business!= null}?${business.jobDescribe}">
+                </div>
+                <button type="submit" class="btn btn-primary" th:text="${business!=null}?'修改':'添加'">添加</button>
+                <a class="btn btn-warning" href="#" th:href="@{/businesses}">取消</a>
+            </form>
+        </main>
+    </div>
+</div>
+
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script type="text/javascript" src="asserts/js/jquery-3.2.1.slim.min.js"
+        th:src="@{/webjars/jquery/3.3.1/jquery.js}"></script>
+<script type="text/javascript" src="asserts/js/popper.min.js"
+        th:src="@{/webjars/popper.js/1.11.1/dist/popper.js}"></script>
+<script type="text/javascript" src="asserts/js/bootstrap.min.js"
+        th:src="@{/webjars/bootstrap/4.0.0/js/bootstrap.js}"></script>
+
+<!-- Icons -->
+<script type="text/javascript" src="asserts/js/feather.min.js" th:src="@{/asserts/js/feather.min.js}"></script>
+<script>
+    feather.replace()
+</script>
+
+</body>
 
 </html>
