--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -1,98 +1,186 @@
 <!DOCTYPE html>
 <!-- saved from url=(0052)http://getbootstrap.com/docs/4.0/examples/dashboard/ -->
-<html lang="en"  xmlns:th="http://www.thymeleaf.org">
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="description" content="">
-		<meta name="author" content="">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-		<title>退役士兵网络培训平台首页</title>
-		<!-- Bootstrap core CSS -->
-		<link href="asserts/css/bootstrap.min.css" th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap.css}" rel="stylesheet">
+    <title>退役士兵网络培训平台首页</title>
+    <!-- Bootstrap core CSS -->
+    <link href="asserts/css/bootstrap.min.css" th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap.css}" rel="stylesheet">
 
-		<!-- Custom styles for this template -->
-		<link href="asserts/css/dashboard.css" th:href="@{/asserts/css/dashboard.css}" rel="stylesheet">
-		<style type="text/css">
-			/* Chart.js */
-			
-			@-webkit-keyframes chartjs-render-animation {
-				from {
-					opacity: 0.99
-				}
-				to {
-					opacity: 1
-				}
-			}
-			
-			@keyframes chartjs-render-animation {
-				from {
-					opacity: 0.99
-				}
-				to {
-					opacity: 1
-				}
-			}
-			
-			.chartjs-render-monitor {
-				-webkit-animation: chartjs-render-animation 0.001s;
-				animation: chartjs-render-animation 0.001s;
-			}
-		</style>
-	</head>
+    <!-- Custom styles for this template -->
+    <link href="asserts/css/dashboard.css" th:href="@{/asserts/css/dashboard.css}" rel="stylesheet">
+    <style type="text/css">
+        /* Chart.js */
 
-	<body>
-		<!--引入topbar-->
-		<div th:replace="commons/bar::topbar"></div>
-		<div class="container-fluid">
-			<div class="row">
-				<!--引入sidebar-->
-				<div th:replace="commons/bar::#sidebar(activeUri='main.html')"></div>
-				<main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-					<div class="chartjs-size-monitor" style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;">
-						<div class="chartjs-size-monitor-expand" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;">
-							<div style="position:absolute;width:1000000px;height:1000000px;left:0;top:0"></div>
-						</div>
-						<div class="chartjs-size-monitor-shrink" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;">
-							<div style="position:absolute;width:200%;height:200%;left:0; top:0"></div>
-						</div>
-					</div>
-					<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
-						<h1 class="h2">Dashboard</h1>
-						<div class="btn-toolbar mb-2 mb-md-0">
-							<div class="btn-group mr-2">
-								<button class="btn btn-sm btn-outline-secondary">Share</button>
-								<button class="btn btn-sm btn-outline-secondary">Export</button>
-							</div>
-							<button class="btn btn-sm btn-outline-secondary dropdown-toggle">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-calendar"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></svg>
-                This week
-              </button>
-						</div>
-					</div>
+        @-webkit-keyframes chartjs-render-animation {
+            from {
+                opacity: 0.99
+            }
+            to {
+                opacity: 1
+            }
+        }
 
-					<canvas class="my-4 chartjs-render-monitor" id="myChart" width="1076" height="454" style="display: block; width: 1076px; height: 454px;"></canvas>
+        @keyframes chartjs-render-animation {
+            from {
+                opacity: 0.99
+            }
+            to {
+                opacity: 1
+            }
+        }
 
-					
-				</main>
-			</div>
-		</div>
+        .chartjs-render-monitor {
+            -webkit-animation: chartjs-render-animation 0.001s;
+            animation: chartjs-render-animation 0.001s;
+        }
+    </style>
+</head>
 
-		<!-- Bootstrap core JavaScript
-    ================================================== -->
-		<!-- Placed at the end of the document so the pages load faster -->
-		<script type="text/javascript" src="asserts/js/jquery-3.2.1.slim.min.js" ></script>
-		<script type="text/javascript" src="asserts/js/popper.min.js" ></script>
-		<script type="text/javascript" src="asserts/js/bootstrap.min.js" ></script>
+<body>
+<!--引入topbar-->
+<div th:replace="commons/bar::topbar"></div>
+<div class="container-fluid">
+    <div class="row">
+        <!--引入sidebar-->
+        <div th:replace="commons/bar::#sidebar(activeUri='main.html')"></div>
+        <main role="main" class="col-md-12 ml-sm-auto col-lg-10 pt-3 px-4">
 
-		<!-- Icons -->
-		<script type="text/javascript" src="asserts/js/feather.min.js" ></script>
-		<script>
-			feather.replace()
-		</script>
+            <div id="demo" class="carousel slide col-md-12" data-ride="carousel">
+
+                <!-- 指示符 -->
+                <ul class="carousel-indicators">
+                    <li data-target="#demo" data-slide-to="0" class="active"></li>
+                    <li data-target="#demo" data-slide-to="1"></li>
+                    <li data-target="#demo" data-slide-to="2"></li>
+                </ul>
+
+                <!-- 轮播图片 -->
+                <div class="carousel-inner">
+                    <div class="carousel-item">
+                        <img class="img-fluid" src="https://static.runoob.com/images/mix/img_mountains_wide.jpg"
+                             width="2500" height="1500">
+                    </div>
+                    <div class="carousel-item active">
+                        <img class="img-fluid" src="https://static.runoob.com/images/mix/img_fjords_wide.jpg" th:src="@{/asserts/img/3.jpg}"
+                             width="2500" height="1500">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="img-fluid" src="https://static.runoob.com/images/mix/img_nature_wide.jpg" th:src="@{/asserts/img/2.jpg}"
+                             width="2500" height="1500">
+                    </div>
+                </div>
+
+                <!-- 左右切换按钮 -->
+                <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                </a>
+                <a class="carousel-control-next" href="#demo" data-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                </a>
+
+            </div>
+
+            <br>
+            <div class="col-md-9">
+                <ul class="nav nav-pills">
+                    <li class="nav-item">
+                        <a class="nav-link active" data-toggle="pill" href="#home">新闻动态</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="pill" href="#menu1">中心公告</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="pill" href="#menu2">国际焦点</a>
+                    </li>
+                </ul>
+                <br>
+                <!-- Tab panes -->
+                <div class="tab-content">
+                    <div class="tab-pane active container" id="home">
+                        <li>
+                            <a href="#" th:href="@{/news/new01}">退役军人事务部召开信息采集工作新闻通气会（附常见问题解答）</a>
+                        </li>
+                        <li>
+                            <a href="@{/a.htm}" th:href="@{/a}" >这里点击可以下载图片</a>
+                        </li>
+                        <li>
+                            <a href="#" th:href="@{/news/new02}">退役军人事务部召开宣传工作座谈会，副部长钱锋出席并讲话</a>
+                        </li>
+                        <li>
+                            <a href="#" th:href="@{/news/new03}">解放军报：军地人大代表热议让军人成为全社会尊崇的职业</a>
+                        </li>
+                        <li>
+                            <a href="#" th:href="@{/news/new04}">安徽省设立2亿元专项资金 精准帮扶解困革命老区优抚对象</a>
+                        </li>
+                        <li>
+                            <a href="#" th:href="@{/news/new05}">河南省委书记王国生到省退役军人事务厅调研座谈</a>
+                        </li>
+                    </div>
+                    <div class="tab-pane container" id="menu1">
+                        <li>
+                            <a href="#" th:href="@{/news/new06}">退役军人事务部 中央军委政治工作部关于做好新年春节期间拥军优属拥政爱民工作的通知</a>
+                        </li>
+                        <!--<li>-->
+                            <!--<a href="@{/asserts/img/logo.jpg}" th:href="@{/asserts/img/logo.jpg}" download="logo.jpg">开展纪念革命先烈之擦洗墓碑志愿服务活动</a>-->
+                        <!--</li>-->
+                        <li>
+                            <a href="#" th:href="@{/news/new07}">《关于进一步加强由政府安排工作退役士兵就业安置工作的意见》解读</a>
+                        </li>
+                        <li>
+                            <a href="#" th:href="@{/news/new08}">退役士兵安置条例</a>
+                        </li>
+                        <li>
+                            <a href="#" th:href="@{/news/new09}">中共中央宣传部 退役军人事务部关于开展“最美退役军人” 学习宣传活动的通知</a>
+                        </li>
+                        <li>
+                            <a href="#" th:href="@{/news/new10}">20名“最美退役军人”候选人名单及事迹开始公示</a>
+                        </li>
+                    </div>
+                    <div class="tab-pane container" id="menu2">
+                        <li>
+                            <a href="#" th:href="@{/news/new11}">走近俄罗斯退役军人管理机构</a>
+                        </li>
+                        <!--<li>-->
+                            <!--<a href="@{/asserts/img/logo.jpg}" th:href="@{/asserts/img/logo.jpg}" download="logo.jpg">俄罗斯退役军人管理保障机构的由来！</a>-->
+                        <!--</li>-->
+                        <li>
+                            <a href="#" th:href="@{/news/new12}">加拿大退役军人享受什么福利待遇</a>
+                        </li>
+                        <li>
+                            <a href="#" th:href="@{/news/new13}">美国退役士兵惨状, 超5万人无家可归, 每天平均22人自杀身亡</a>
+                        </li>
+                        <li>
+                            <a href="#" th:href="@{/news/new14}">历史上的德国军人真的那么高素质吗？</a>
+                        </li>
+                        <li>
+                            <a href="#" th:href="@{/news/new15}">二战时的日本投降后, 700多万退役士兵下场如何?</a>
+                        </li>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>
+</div>
+
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script type="text/javascript" src="asserts/js/jquery-3.2.1.slim.min.js"></script>
+<script type="text/javascript" src="asserts/js/popper.min.js"></script>
+<script type="text/javascript" src="asserts/js/bootstrap.min.js"></script>
+
+<!-- Icons -->
+<script type="text/javascript" src="asserts/js/feather.min.js"></script>
+<script>
+    feather.replace()
+</script>
 
 
-
-	</body>
+</body>
 
 </html>
