--- a/src/main/resources/templates/soldier/list.html
+++ b/src/main/resources/templates/soldier/list.html
@@ -1,148 +1,171 @@
 <!DOCTYPE html>
 <!-- saved from url=(0052)http://getbootstrap.com/docs/4.0/examples/dashboard/ -->
-<html lang="en"  xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="description" content="">
-		<meta name="author" content="">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-		<title>退役士兵列表</title>
-		<!-- Bootstrap core CSS -->
-		<link href="asserts/css/bootstrap.min.css" th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap.css}" rel="stylesheet">
+    <title>退役士兵列表</title>
+    <!-- Bootstrap core CSS -->
+    <link href="asserts/css/bootstrap.min.css" th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap.css}" rel="stylesheet">
 
-		<!-- Custom styles for this template -->
-		<link href="asserts/css/dashboard.css" th:href="@{/asserts/css/dashboard.css}" rel="stylesheet">
-		<style type="text/css">
-			/* Chart.js */
-			
-			@-webkit-keyframes chartjs-render-animation {
-				from {
-					opacity: 0.99
-				}
-				to {
-					opacity: 1
-				}
-			}
-			
-			@keyframes chartjs-render-animation {
-				from {
-					opacity: 0.99
-				}
-				to {
-					opacity: 1
-				}
-			}
-			
-			.chartjs-render-monitor {
-				-webkit-animation: chartjs-render-animation 0.001s;
-				animation: chartjs-render-animation 0.001s;
-			}
-		</style>
-	</head>
+    <!-- Custom styles for this template -->
+    <link href="asserts/css/dashboard.css" th:href="@{/asserts/css/dashboard.css}" rel="stylesheet">
+    <style type="text/css">
+        /* Chart.js */
 
-	<body>
-	<!--引入抽取的topbar-->
-	<!--模板名：会使用thymeleaf的前后缀配置规则进行解析-->
-	<div th:replace="commons/bar::topbar"></div>
+        @-webkit-keyframes chartjs-render-animation {
+            from {
+                opacity: 0.99
+            }
+            to {
+                opacity: 1
+            }
+        }
 
-		<div class="container-fluid">
-			<div class="row">
-				<!--引入侧边栏-->
-				<div th:replace="commons/bar::#sidebar(activeUri='soldiers')"></div>
-				<main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-					<h2><a class="btn btn-sm btn-success" href="soldier" th:href="@{/soldier}">士兵添加</a></h2>
-					<div class="table-responsive">
-						<table class="table table-striped table-sm">
-							<thead>
-								<tr>
-									<th>编号</th>
-									<th>姓名</th>
-									<th>年龄</th>
-									<th>性别</th>
-									<th>邮箱</th>
-									<th>电话</th>
-									<th>国籍</th>
-									<th>民族</th>
-									<th>兵种</th>
-									<th>服役地区</th>
-									<th>创建时间</th>
-									<th>操作</th>
-								</tr>
-							</thead>
-							<tbody>
-							<tr th:each="soldier:${page.records}">
-								<td th:text="${soldier.id.substring(0,5)}"></td>
-								<td>[[${soldier.name}]]</td>
-								<td th:text="${soldier.age}"></td>
-								<td th:text="${soldier.gender}==0?'女':'男'"></td>
-								<td th:text="${soldier.email}"></td>
-								<td th:text="${soldier.phone}"></td>
-								<td th:text="${soldier.nationality}"></td>
-								<td th:text="${soldier.nation}"></td>
-								<td th:text="${soldier.kind}"></td>
-								<td th:text="${soldier.serviceArea}"></td>
-								<td th:text="${#dates.format(soldier.createTime, 'yyyy-MM-dd HH:mm')}"></td>
-								<td>
-									<a class="btn btn-sm btn-primary" th:href="@{/soldier/}+${soldier.id}">编辑</a>
-									<button th:attr="del_uri=@{/soldier/}+${soldier.id}" class="btn btn-sm btn-danger deleteBtn">删除</button>
-								</td>
-							</tr>
-							</tbody>
-						</table>
-					</div>
-					<div class="row">
-						<!-- 分页数据 -->
-						<div class="col-md-4">
-							当前 <span th:text="${page.current}"></span> 页,共 <span th:text="${page.pages}"></span> 页,存在 <span th:text="${page
+        @keyframes chartjs-render-animation {
+            from {
+                opacity: 0.99
+            }
+            to {
+                opacity: 1
+            }
+        }
+
+        .chartjs-render-monitor {
+            -webkit-animation: chartjs-render-animation 0.001s;
+            animation: chartjs-render-animation 0.001s;
+        }
+    </style>
+</head>
+
+<body>
+<!--引入抽取的topbar-->
+<!--模板名：会使用thymeleaf的前后缀配置规则进行解析-->
+<div th:replace="commons/bar::topbar"></div>
+
+<div class="container-fluid">
+    <div class="row">
+        <!--引入侧边栏-->
+        <div th:replace="commons/bar::#sidebar(activeUri='soldiers')"></div>
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
+            <h2><a class="btn btn-sm btn-success" href="soldier" th:href="@{/soldier}">士兵添加</a>
+                <a class="btn btn-sm btn-info" th:href="@{/exportSoldierExcel}">导出Excel</a>
+            </h2>
+            <div class="table-responsive">
+                <table class="table table-striped table-sm">
+                    <thead>
+                    <tr>
+                        <th>编号</th>
+                        <th>姓名</th>
+                        <th>年龄</th>
+                        <th>性别</th>
+                        <th>邮箱</th>
+                        <th>电话</th>
+                        <th>国籍</th>
+                        <th>民族</th>
+                        <th>兵种</th>
+                        <th>服役地区</th>
+                        <th>创建时间</th>
+                        <th>操作</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="soldier:${page.records}">
+                        <td th:text="${soldier.id.substring(0,5)}"></td>
+                        <td>[[${soldier.name}]]</td>
+                        <td th:text="${soldier.age}"></td>
+                        <td th:text="${soldier.gender}==0?'女':'男'"></td>
+                        <td th:text="${soldier.email}"></td>
+                        <td th:text="${soldier.phone}"></td>
+                        <td th:text="${soldier.nationality}"></td>
+                        <td th:text="${soldier.nation}"></td>
+                        <td th:text="${soldier.kind}"></td>
+                        <td th:text="${soldier.serviceArea}"></td>
+                        <td th:text="${#dates.format(soldier.createTime, 'yyyy-MM-dd HH:mm')}"></td>
+                        <td>
+                            <a class="btn btn-sm btn-primary" th:href="@{/soldier/}+${soldier.id}">编辑</a>
+                            <a class="btn btn-sm btn-danger" th:href="@{/soldier/delete/}+${soldier.id}">删除</a>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="row">
+                <!-- 分页数据 -->
+                <div class="col-md-4">
+                    当前 <span th:text="${page.current}"></span> 页,共 <span th:text="${page.pages}"></span> 页,存在 <span
+                        th:text="${page
 							.total}"></span> 条记录
-						</div>
-						<!-- 分页条 -->
-						<div class="col-md-4 offset-md-4">
-							<nav aria-label="Page navigation">
-								<ul class="pagination">
-									<li class="page-item" th:class="${page.current==1}?'page-item disabled':''"><a class="page-link" href="#" th:href="@{/soldiers} + '?pn=' +${page.current-1} ">Previous</a></li>
-									<li th:if="${page.current}-2>=1" class="page-item" ><a class="page-link" href="#" th:text="${page.current}-2" th:href="@{/soldiers} + '?pn=' +${page.current-2} "></a></li>
-									<li th:if="${page.current}-1>=1" class="page-item" ><a class="page-link" href="#" th:text="${page.current}-1" th:href="@{/soldiers} + '?pn=' +${page.current-1} "></a></li>
-									<li class="page-item active"><a class="page-link" href="#" th:text="${page.current}" th:href="@{/soldiers} + '?pn=' +${page.current} "></a></li>
-									<li th:if="${page.current}+1<=${page.pages}" class="page-item"><a class="page-link" href="#" th:text="${page.current}+1" th:href="@{/soldiers} + '?pn=' +${page.current+1} "></a></li>
-									<li th:if="${page.current}+2<=${page.pages}" class="page-item"><a class="page-link" href="#" th:text="${page.current}+2" th:href="@{/soldiers} + '?pn=' +${page.current+2} "></a></li>
-									<li class="page-item" th:class="${page.current==page.pages}?'page-item disabled':''"><a class="page-link" href="#" th:href="@{/soldiers} + '?pn=' +${page.current+1} ">Next</a></li>
-								</ul>
-							</nav>
-						</div>
-					</div>
-				</main>
-				<form id="deleteSoldierForm"  method="post">
-					<input type="hidden" name="_method" value="delete"/>
-				</form>
-			</div>
-		</div>
+                </div>
+                <!-- 分页条 -->
+                <div class="col-md-4 offset-md-4">
+                    <nav aria-label="Page navigation">
+                        <ul class="pagination">
+                            <li class="page-item" th:class="${page.current==1}?'page-item disabled':''"><a
+                                    class="page-link" href="#" th:href="@{/soldiers} + '?pn=' +${page.current-1} ">Previous</a>
+                            </li>
+                            <li th:if="${page.current}-2>=1" class="page-item"><a class="page-link" href="#"
+                                                                                  th:text="${page.current}-2"
+                                                                                  th:href="@{/soldiers} + '?pn=' +${page.current-2} "></a>
+                            </li>
+                            <li th:if="${page.current}-1>=1" class="page-item"><a class="page-link" href="#"
+                                                                                  th:text="${page.current}-1"
+                                                                                  th:href="@{/soldiers} + '?pn=' +${page.current-1} "></a>
+                            </li>
+                            <li class="page-item active"><a class="page-link" href="#" th:text="${page.current}"
+                                                            th:href="@{/soldiers} + '?pn=' +${page.current} "></a></li>
+                            <li th:if="${page.current}+1<=${page.pages}" class="page-item"><a class="page-link" href="#"
+                                                                                              th:text="${page.current}+1"
+                                                                                              th:href="@{/soldiers} + '?pn=' +${page.current+1} "></a>
+                            </li>
+                            <li th:if="${page.current}+2<=${page.pages}" class="page-item"><a class="page-link" href="#"
+                                                                                              th:text="${page.current}+2"
+                                                                                              th:href="@{/soldiers} + '?pn=' +${page.current+2} "></a>
+                            </li>
+                            <li class="page-item" th:class="${page.current==page.pages}?'page-item disabled':''"><a
+                                    class="page-link" href="#"
+                                    th:href="@{/soldiers} + '?pn=' +${page.current+1} ">Next</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </main>
+        <form id="deleteSoldierForm" method="post">
+            <input type="hidden" name="_method" value="delete"/>
+        </form>
+    </div>
+</div>
 
-		<!-- Bootstrap core JavaScript
-    ================================================== -->
-	<!-- Placed at the end of the document so the pages load faster -->
-	<script type="text/javascript" src="asserts/js/jquery-3.2.1.slim.min.js" th:src="@{/webjars/jquery/3.3.1/jquery.js}"></script>
-	<script type="text/javascript" src="asserts/js/popper.min.js" th:src="@{/webjars/popper.js/1.11.1/dist/popper.js}"></script>
-	<script type="text/javascript" src="asserts/js/bootstrap.min.js" th:src="@{/webjars/bootstrap/4.0.0/js/bootstrap.js}"></script>
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script type="text/javascript" src="asserts/js/jquery-3.2.1.slim.min.js"
+        th:src="@{/webjars/jquery/3.3.1/jquery.js}"></script>
+<script type="text/javascript" src="asserts/js/popper.min.js"
+        th:src="@{/webjars/popper.js/1.11.1/dist/popper.js}"></script>
+<script type="text/javascript" src="asserts/js/bootstrap.min.js"
+        th:src="@{/webjars/bootstrap/4.0.0/js/bootstrap.js}"></script>
 
-	<!-- Icons -->
-	<script type="text/javascript" src="asserts/js/feather.min.js" th:src="@{/asserts/js/feather.min.js}"></script>
-		<script>
-			feather.replace()
-		</script>
+<!-- Icons -->
+<script type="text/javascript" src="asserts/js/feather.min.js" th:src="@{/asserts/js/feather.min.js}"></script>
+<script>
+    feather.replace()
+</script>
 
-		<!-- Graphs -->
-		<script>
-            $(".deleteBtn").click(function(){
-                //删除当前士兵的
-                $("#deleteSoldierForm").attr("action",$(this).attr("del_uri")).submit();
-                return false;
-            });
-		</script>
+<!-- Graphs -->
+<script>
+    $(".deleteBtn").click(function () {
+        //删除当前士兵的
+        $("#deleteSoldierForm").attr("action", $(this).attr("del_uri")).submit();
+        return false;
+    });
+</script>
 
 
-	</body>
+</body>
 
 </html>
