解决打成jar包之后启动无法访问静态html

--- a/src/main/resources/templates/commons/bar.html
+++ b/src/main/resources/templates/commons/bar.html
@@ -151,7 +151,7 @@
             </li>
             <li class="nav-item">
                 <!--在Admin注册之后,这个id不会变-->
-                <a class="nav-link" href="" th:href="@{http://localhost:8769/#/instances/62487bc8d607/details}">
+                <a class="nav-link" href="" th:href="@{http://localhost:8769/#/instances/888afaf591f3/details}" th:target="@{http://localhost:8769/#/instances/888afaf591f3/details}">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                          stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                          class="feather feather-file-text">
