背景图片取用网网络上的

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
     <link href="asserts/css/signin.css" th:href="@{/asserts/css/signin.css}" rel="stylesheet">
 </head>
 
-<body class="text-center">
+<body class="text-center" style="background-image: url('http://pic.netbian.com/uploads/allimg/180805/162957-15334577973962.jpg'); background-size: cover">
 
 <form class="form-signin" action="dashboard.html" th:action="@{/user/login}" method="post">
     <img class="mb-4" th:src="@{/asserts/img/logo.jpg}" src="asserts/img/logo.jpg" alt="" width="72" height="72">
