页面细节完善,不出意外就不改了

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -105,9 +105,9 @@
                         <li>
                             <a href="#" th:href="@{/news/new01}">退役军人事务部召开信息采集工作新闻通气会（附常见问题解答）</a>
                         </li>
-                        <li>
-                            <a href="@{/a.htm}" th:href="@{/a}" >这里点击可以下载图片</a>
-                        </li>
+                        <!--<li>-->
+                            <!--<a href="@{/a.htm}" th:href="@{/a}" >这里点击可以下载图片</a>-->
+                        <!--</li>-->
                         <li>
                             <a href="#" th:href="@{/news/new02}">退役军人事务部召开宣传工作座谈会，副部长钱锋出席并讲话</a>
                         </li>
