--- a/src/main/resources/templates/news/new03.html
+++ b/src/main/resources/templates/news/new03.html
@@ -49,35 +49,30 @@
         <div th:replace="commons/bar::#sidebar(activeUri='main.html')"></div>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-            <div class="container">
+            <div class="container bg-light text-dark" style="font-size: 18px; font-family: 楷体">
                 <h2><a class="btn btn-sm btn-success" href="soldier" th:href="@{/main.html}">返回</a></h2>
                 <br>
                 <br>
-                <p>3月11日，本报记者孙兴维（左一）采访人大代表王明孝、祖木热提·吾布力、宗永祥、马和帕丽（左二至左五）。穆可双摄
-
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3月11日，本报记者孙兴维（左一）采访人大代表王明孝、祖木热提·吾布力、宗永祥、马和帕丽（左二至左五）。穆可双摄
                     受访代表
-
                     陆军某研究院高级工程师 王明孝代表
-
                     武警四川总队政委 宗永祥代表
-
                     新疆哈密市市长 祖木热提·吾布力代表
-
                     陆军某部指导员 马和帕丽代表</p>
-                <p>人民礼遇，社会尊崇，子弟兵心中分量最重的勋章</p>
-                <p>记者：去年3月12日，习主席在出席十三届全国人大一次会议解放军和武警部队代表团全体会议时指出，组建退役军人管理保障机构对于更好为退役军人服务
+                <p style="color: red" class="font-weight-bold">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;人民礼遇，社会尊崇，子弟兵心中分量最重的勋章</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;记者：去年3月12日，习主席在出席十三届全国人大一次会议解放军和武警部队代表团全体会议时指出，组建退役军人管理保障机构对于更好为退役军人服务
                     、让军人成为全社会尊崇的职业具有重要意义，要把好事办好办实。请谈谈在这方面的亲身感受。</p>
-                <p>王明孝：我从事军事测绘工作30多年，亲身感受到了人民群众对测绘兵的关心厚爱。有一个镜头让我终生难忘：我们到西藏测绘时，经常碰到沿途的小学生向我们行少先队队礼，一直到我们走远了，才把手放下来。同时，测绘事业离不开人民群众的支持，在缺氧的高原，在深山密林，许
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;王明孝：我从事军事测绘工作30多年，亲身感受到了人民群众对测绘兵的关心厚爱。有一个镜头让我终生难忘：我们到西藏测绘时，经常碰到沿途的小学生向我们行少先队队礼，一直到我们走远了，才把手放下来。同时，测绘事业离不开人民群众的支持，在缺氧的高原，在深山密林，许
                     多群众冒着生命危险，义务给我们当向导。什么是尊崇？这就是最直接最真诚的尊崇，这也是我们干事创业的动力源泉。</p>
-                <p>宗永祥：对于军人而言，分量最重的勋章，便是人民的礼遇、社会的尊崇。从部队建设到每年的干部转业安置、军属就业、子女上学等，地方各级党委政府都给予了大力支持。让我印象深刻的一件事，是四川省退役军人事务厅组建成立不久，就派人专程到总队走访，听取意见建议，主动
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;宗永祥：对于军人而言，分量最重的勋章，便是人民的礼遇、社会的尊崇。从部队建设到每年的干部转业安置、军属就业、子女上学等，地方各级党委政府都给予了大力支持。让我印象深刻的一件事，是四川省退役军人事务厅组建成立不久，就派人专程到总队走访，听取意见建议，主动
                     对接工作。这种主动服务的大局意识和为部队分忧的担当精神，让我们很感动。</p>
-                <p>马和帕丽：我所在部队的班长黄文津，去年参加“晴空”国际军事比武竞赛，与多国精英同台竞技，获得优异成绩，被新疆军区记一等功并表彰为“基层建设先进个人”。团里专门派人将喜报送到黄文津家乡汕头，汕头市政府和汕头警备区联合在黄文津家乡潮阳区铜盂镇凤壶村举行庆祝仪式，
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;马和帕丽：我所在部队的班长黄文津，去年参加“晴空”国际军事比武竞赛，与多国精英同台竞技，获得优异成绩，被新疆军区记一等功并表彰为“基层建设先进个人”。团里专门派人将喜报送到黄文津家乡汕头，汕头市政府和汕头警备区联合在黄文津家乡潮阳区铜盂镇凤壶村举行庆祝仪式，
                     让我们官兵感受到了当地政府的关心厚爱。</p>
-                <p>构筑崇军尚武的“精神长城”，全社会一直在行动</p>
-                <p>记者：今年从中央到村六级都要建立退役军人服务机构，这是国家对军人关心关爱的又一具体举措。事实上，军人职业荣誉从来都不只是部队自己的事情，它是由国家、社会、家庭、个人共同构筑的“精神长城”。请结合各自实际谈谈感受。</p>
-                <p>祖木热提·吾布力：军队不生产谷物，但生产安全；军人不生产商品，但生产和平。“所谓岁月静好，只不过是他们在负重前行”，正是因为有了军人默默守卫家园，我们才能享受安宁的生活。关爱在伍的、服务退伍的，是各级政府义不容辞的责任。近年来，哈密市在转业干部安置、退役军人服务管理等方面做了大量工作，特别是对部队官兵家属就业、子女上学等方面遇到的困难，我们市委市政府全力解决。目前，哈密市最好的幼儿园、小学、初中全部开通绿色通道，让每一位军人的子女都能上最好的学校。我出生在军人家
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;构筑崇军尚武的“精神长城”，全社会一直在行动</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;记者：今年从中央到村六级都要建立退役军人服务机构，这是国家对军人关心关爱的又一具体举措。事实上，军人职业荣誉从来都不只是部队自己的事情，它是由国家、社会、家庭、个人共同构筑的“精神长城”。请结合各自实际谈谈感受。</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;祖木热提·吾布力：军队不生产谷物，但生产安全；军人不生产商品，但生产和平。“所谓岁月静好，只不过是他们在负重前行”，正是因为有了军人默默守卫家园，我们才能享受安宁的生活。关爱在伍的、服务退伍的，是各级政府义不容辞的责任。近年来，哈密市在转业干部安置、退役军人服务管理等方面做了大量工作，特别是对部队官兵家属就业、子女上学等方面遇到的困难，我们市委市政府全力解决。目前，哈密市最好的幼儿园、小学、初中全部开通绿色通道，让每一位军人的子女都能上最好的学校。我出生在军人家
                     庭，父母、丈夫、儿子都当过兵，深知军人的牺牲奉献。我们将努力为军人及军属排忧解难，让生活在哈密市的军人和军属享有更多的获得感幸福感。</p>
-                <p>宗永祥：党的十八大以来，党和政府采取了一系列措施，在全社会营造了尊崇军人的浓厚氛围。特别是在这次两会上又发布消息，将在中央和省市县建立退役军人服务中心，在乡镇、村建立退役军人服务站，并要求“全覆盖”，做到“有机构、有编制、有人员、有经费、有保障”。我相信，整
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;宗永祥：党的十八大以来，党和政府采取了一系列措施，在全社会营造了尊崇军人的浓厚氛围。特别是在这次两会上又发布消息，将在中央和省市县建立退役军人服务中心，在乡镇、村建立退役军人服务站，并要求“全覆盖”，做到“有机构、有编制、有人员、有经费、有保障”。我相信，整
                     个退役军人服务保障体系建成后，可以为广大退役军人和其他优抚对象提供更多更好的服务。</p>
             </div>
 
