--- a/src/main/resources/templates/news/new04.html
+++ b/src/main/resources/templates/news/new04.html
@@ -49,19 +49,19 @@
         <div th:replace="commons/bar::#sidebar(activeUri='main.html')"></div>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-            <div class="container">
+            <div class="container bg-light text-dark" style="font-size: 18px; font-family: 楷体">
                 <h2><a class="btn btn-sm btn-success" href="soldier" th:href="@{/main.html}">返回</a></h2>
                 <br>
                 <br>
-                <p>退役军人事务部召开宣传工作座谈会，副部长钱锋出席并讲话</p>
-                <p>为切实提高优抚保障水平，兜底保障革命老区生活困难退役军人和其他优抚对象，不断增强他们的获得感、幸福感、安全感，安徽近日出台《关于进一步加强大别山等革命老区脱贫攻坚的实施意见》（皖发〔2018〕39号），设立2亿元省级专项资金，用于解决革命老区老红军战士、建国前参加革命在乡复员军人、烈军属、老年烈士
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;退役军人事务部召开宣传工作座谈会，副部长钱锋出席并讲话</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;为切实提高优抚保障水平，兜底保障革命老区生活困难退役军人和其他优抚对象，不断增强他们的获得感、幸福感、安全感，安徽近日出台《关于进一步加强大别山等革命老区脱贫攻坚的实施意见》（皖发〔2018〕39号），设立2亿元省级专项资金，用于解决革命老区老红军战士、建国前参加革命在乡复员军人、烈军属、老年烈士
                     子女、建国前入党的老党员以及其他困难的复退军人等优抚对象生活、医疗和住房困难，确保其生活水平不低于当地居民平均水平。</p>
-                <p>此项资金主要用于68个革命老区县（市、区）优抚对象"解三难"以及关爱帮扶等。按照属地管理、分级负责的原则，由各地统筹使用。禁止擅自利用专项资金平均分配以提高优抚对象抚恤和生活补助标准，本着"救急救难"的原则，通过定向慰问、精准帮扶、一事一议等方式，充实遭遇重大变故、特别困难的优抚对象帮扶解困资金。
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;此项资金主要用于68个革命老区县（市、区）优抚对象"解三难"以及关爱帮扶等。按照属地管理、分级负责的原则，由各地统筹使用。禁止擅自利用专项资金平均分配以提高优抚对象抚恤和生活补助标准，本着"救急救难"的原则，通过定向慰问、精准帮扶、一事一议等方式，充实遭遇重大变故、特别困难的优抚对象帮扶解困资金。
                     同时要求各地结合实际，制定专项资金使用办法，经市级审核后，报省退役军人事务厅备案。</p>
-                <p>下一步，省退役军人事务厅将结合日常工作开展，适时督导各地对该项资金的管理使用情况，并明确将该项资金的使用管理列入对各地退役军人服务管理工作综合奖补的考核内容。</p>
-                <p>退役军人事务主管部门加强与编制、财政等部门的沟通联系，争取工作支持。2018年8月，省编委先后下发《关于同意成立安徽省退役军人服务管理中心的批复》《关于设立退役军人服务管理机构的指导意见》，明确了省退役军人服务管理中心的性质、任务、编制，并对各地机构建设、编制配备提出了要求。省退役军人服务管理中心迅速完成组建，成为全国第三个建立省级退役军人服务管理中心的省份，具体承担了信访接待、信访事项办理、信息采集等工作。省级中心编制25人，实际到岗17人，均为本科以上学历，硕士研究生达到11人，平均年龄35岁，均有丰富的基层工作经验。根据省委、省政府统一部署，
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;下一步，省退役军人事务厅将结合日常工作开展，适时督导各地对该项资金的管理使用情况，并明确将该项资金的使用管理列入对各地退役军人服务管理工作综合奖补的考核内容。</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;退役军人事务主管部门加强与编制、财政等部门的沟通联系，争取工作支持。2018年8月，省编委先后下发《关于同意成立安徽省退役军人服务管理中心的批复》《关于设立退役军人服务管理机构的指导意见》，明确了省退役军人服务管理中心的性质、任务、编制，并对各地机构建设、编制配备提出了要求。省退役军人服务管理中心迅速完成组建，成为全国第三个建立省级退役军人服务管理中心的省份，具体承担了信访接待、信访事项办理、信息采集等工作。省级中心编制25人，实际到岗17人，均为本科以上学历，硕士研究生达到11人，平均年龄35岁，均有丰富的基层工作经验。根据省委、省政府统一部署，
                     结合服务对象数量、任务等实际情况，市、县、乡三级都核定了事业编制，村级工作站也明确了兼职人员。</p>
-                <p>以省委、省政府名义出台《关于进一步做好新时代退役军人管理服务工作的意见》，以省委办公厅、省政府办公厅名义出台《关于进一步做好新时代退役军人管理服务工作的实施方案》，要求各地按照"有机构、有编制、有人员、有经费、有保障"的"五有"标准，组建"两站三中心"。在省委退役军人事务工作领导小组第一次全体会议上，省委再次强调，要严格对标中央"全覆盖""五有"要求，进一步健全专业规范的服务保障体系，确保编制职能、人员力量、工作经费、办公用房用
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;以省委、省政府名义出台《关于进一步做好新时代退役军人管理服务工作的意见》，以省委办公厅、省政府办公厅名义出台《关于进一步做好新时代退役军人管理服务工作的实施方案》，要求各地按照"有机构、有编制、有人员、有经费、有保障"的"五有"标准，组建"两站三中心"。在省委退役军人事务工作领导小组第一次全体会议上，省委再次强调，要严格对标中央"全覆盖""五有"要求，进一步健全专业规范的服务保障体系，确保编制职能、人员力量、工作经费、办公用房用
                     车等与其承担的任务相匹配，加快形成横向到边、纵向到底、覆盖全员的服务管理网络。</p>
             </div>
 
