--- a/src/main/resources/templates/news/new05.html
+++ b/src/main/resources/templates/news/new05.html
@@ -49,17 +49,15 @@
         <div th:replace="commons/bar::#sidebar(activeUri='main.html')"></div>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-            <div class="container">
+            <div class="container bg-light text-dark" style="font-size: 18px; font-family: 楷体">
                 <h2><a class="btn btn-sm btn-success" href="soldier" th:href="@{/main.html}">返回</a></h2>
                 <br>
                 <br>
-                <p>近日，河南省委书记王国生到省退役军人事务厅走访调研，先后到综合组、人事党务组、财务组、走访慰问组和来信来访组等，与工作人员亲切交流，详细了解工作开展情况，并向大家致以诚挚问候。随后主持召开了处级以上干
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;近日，河南省委书记王国生到省退役军人事务厅走访调研，先后到综合组、人事党务组、财务组、走访慰问组和来信来访组等，与工作人员亲切交流，详细了解工作开展情况，并向大家致以诚挚问候。随后主持召开了处级以上干
                     部座谈会，听取情况汇报，对省退役军人事务厅组建以来取得的工作成绩给予了肯定，并对下步工作提出具体要求。</p>
-                <p>王国生指出，要持续营造学的氛围、严的氛围、干的氛围，坚持用习近平新时代中国特色社会主义思想武装头脑，树牢"四个意识"、坚定"四个自信"、做到"两个维护"，使学习成为自觉、成为习惯，在入脑入心上见成效，真正做到学懂弄通做实。要坚持以党的政治建设为统领，增强责任感、使命感，主动担当、积极作为，自觉在全省发展大局中谋划工作、推动落实。要紧紧围绕党政机构改革目标，增强改革创新意识，适应新形势，探索新方法，展现新作为，在新的起点上推动各项工作走深走实，不断开创工作新局面。要锤炼过硬作风，增强服务意识，在一线经受锻炼，在服务中强化能力，用工作实绩体现服务效能。要加强组织领导，打牢基层基础，加强干部队伍建设，以高质量的工作为全省发展大局提供有力支撑。要努力在基础工作、创新意识、工作作风方面下大功夫，切实维护好、保障好广大退役军人的合法利益，凝聚、
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;王国生指出，要持续营造学的氛围、严的氛围、干的氛围，坚持用习近平新时代中国特色社会主义思想武装头脑，树牢"四个意识"、坚定"四个自信"、做到"两个维护"，使学习成为自觉、成为习惯，在入脑入心上见成效，真正做到学懂弄通做实。要坚持以党的政治建设为统领，增强责任感、使命感，主动担当、积极作为，自觉在全省发展大局中谋划工作、推动落实。要紧紧围绕党政机构改革目标，增强改革创新意识，适应新形势，探索新方法，展现新作为，在新的起点上推动各项工作走深走实，不断开创工作新局面。要锤炼过硬作风，增强服务意识，在一线经受锻炼，在服务中强化能力，用工作实绩体现服务效能。要加强组织领导，打牢基层基础，加强干部队伍建设，以高质量的工作为全省发展大局提供有力支撑。要努力在基础工作、创新意识、工作作风方面下大功夫，切实维护好、保障好广大退役军人的合法利益，凝聚、
                     发挥广大退役军人智慧和力量，为中原更加出彩增色添彩，为实现中华民族伟大复兴的中国梦贡献力量。</p>
-                <p>省委秘书长穆为民参加调研。</p>
-                <p></p>
-                <p></p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;省委秘书长穆为民参加调研。</p>
             </div>
 
         </main>
