--- a/src/main/resources/templates/news/new06.html
+++ b/src/main/resources/templates/news/new06.html
@@ -49,19 +49,19 @@
         <div th:replace="commons/bar::#sidebar(activeUri='main.html')"></div>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-            <div class="container">
+            <div class="container bg-light text-dark" style="font-size: 18px; font-family: 楷体">
                 <h2><a class="btn btn-sm btn-success" href="soldier" th:href="@{/main.html}">返回</a></h2>
                 <br>
                 <br>
-                <p>2019年新年春节即将来临。节日期间，各地各部队各部门要以习近平新时代中国特色社会主义思想为指导，全面贯彻党的十九大和十九届二中、三中全会精神
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019年新年春节即将来临。节日期间，各地各部队各部门要以习近平新时代中国特色社会主义思想为指导，全面贯彻党的十九大和十九届二中、三中全会精神
                     ，紧紧围绕服务军地建设改革，扎实做好拥军优属、拥政爱民工作，不断巩固坚如磐石的军政军民团结，汇聚强国强军的磅礴力量。</p>
-                <p>一、大力营造浓厚双拥氛围。各地各部队要结合歌颂改革开放40年取得的伟大成就、迎接新中国成立70周年华诞，广泛开展以爱国主义为核心的双拥宣传教育，推动双拥光荣传统发扬光大。充分运用主流媒体、新兴媒介等，大力宣传军政军民团结在军地改革建设中发挥的重要作用，宣传爱国拥军模范、拥政爱民模范和优秀退役军人的先进事迹，强化广大干部群众和官兵全民国防全民建、人民军队为人民的理念。采取组织军营开放、过“社会一日”、缅怀革命先烈、参观爱国主义和国防教育基地、举办形势报告等形式，因地制宜开展双拥教育活动，唱响爱我人民爱我军的双拥旋律。通过组织军地联欢联谊、
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="font-weight-bold">一、大力营造浓厚双拥氛围。</span> 各地各部队要结合歌颂改革开放40年取得的伟大成就、迎接新中国成立70周年华诞，广泛开展以爱国主义为核心的双拥宣传教育，推动双拥光荣传统发扬光大。充分运用主流媒体、新兴媒介等，大力宣传军政军民团结在军地改革建设中发挥的重要作用，宣传爱国拥军模范、拥政爱民模范和优秀退役军人的先进事迹，强化广大干部群众和官兵全民国防全民建、人民军队为人民的理念。采取组织军营开放、过“社会一日”、缅怀革命先烈、参观爱国主义和国防教育基地、举办形势报告等形式，因地制宜开展双拥教育活动，唱响爱我人民爱我军的双拥旋律。通过组织军地联欢联谊、
                     军民文艺演出及双拥知识竞赛、影视展播等群众性文化活动，丰富节日双拥文化生活，密切军政军民鱼水深情。</p>
-                <p>二、主动帮助部队解决实际问题。各地各部门要关心支持部队练兵备战和建设改革，想方设法帮助部队办实事解难题。根据机构改革和部队调整换防情况，及时健全双拥组织领导和工作机构，掌握驻军部队信息，完善联席会议、合署办公、情况通报等制度机制，确保军地沟通协调顺畅有序。抓住召开军政座谈会、军民迎新春茶话会和走访慰问等时机，主动了解部队实际困难，研究拿出具体措施，军地合力推动一批部队改革急需、备战急用、官兵急盼问题解决。积极配合部队完成训练演练、战备执勤和抢险救灾等任务，努力搞好通信、交通、水电、食宿等保障，形成部队练打仗、地方练支前的生动格局。
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="font-weight-bold">二、主动帮助部队解决实际问题。</span>各地各部门要关心支持部队练兵备战和建设改革，想方设法帮助部队办实事解难题。根据机构改革和部队调整换防情况，及时健全双拥组织领导和工作机构，掌握驻军部队信息，完善联席会议、合署办公、情况通报等制度机制，确保军地沟通协调顺畅有序。抓住召开军政座谈会、军民迎新春茶话会和走访慰问等时机，主动了解部队实际困难，研究拿出具体措施，军地合力推动一批部队改革急需、备战急用、官兵急盼问题解决。积极配合部队完成训练演练、战备执勤和抢险救灾等任务，努力搞好通信、交通、水电、食宿等保障，形成部队练打仗、地方练支前的生动格局。
                     深入开展拥军慰问活动，就近就便组织到基层部队特别是边海防一线部队看望慰问官兵，进一步激励军心士气。</p>
-                <p>三、积极服务驻地民生福祉改善。各部队要坚持以人民为中心，大力支持驻地保障和改善民生，增强人民群众的幸福感获得感。持续参与打赢脱贫攻坚战，深入扶贫联系点和结对帮扶户，共商脱贫致富的具体办法，细化教育扶贫、医疗扶贫、智力扶贫等方面的措施方案，群策群力帮助他们解决新年春节期间遇到的实际困难。广泛开展爱民为民活动，配合搞好驻地环境卫生整治、便民设施建设、新年春节氛围渲染等工作，组织学雷锋小分队上门为五保户、空巢老人、残疾人等困难群众送温暖献爱心。积极参加平安创建、和谐创建和民族团结进步创建活动，协助地方维护机场、车站、港口等春运秩序，配合搞好社会治安治理，
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="font-weight-bold">三、积极服务驻地民生福祉改善。</span>各部队要坚持以人民为中心，大力支持驻地保障和改善民生，增强人民群众的幸福感获得感。持续参与打赢脱贫攻坚战，深入扶贫联系点和结对帮扶户，共商脱贫致富的具体办法，细化教育扶贫、医疗扶贫、智力扶贫等方面的措施方案，群策群力帮助他们解决新年春节期间遇到的实际困难。广泛开展爱民为民活动，配合搞好驻地环境卫生整治、便民设施建设、新年春节氛围渲染等工作，组织学雷锋小分队上门为五保户、空巢老人、残疾人等困难群众送温暖献爱心。积极参加平安创建、和谐创建和民族团结进步创建活动，协助地方维护机场、车站、港口等春运秩序，配合搞好社会治安治理，
                     做好抢险救灾和应急救援各项准备，为群众欢度佳节创造良好环境。各部队要专门安排时间，开展群众纪律教育和检查，树立和维护人民子弟兵的良好形象。</p>
-                <p>四、扎实抓好各项政策待遇落实。各地各部门要牢固树立依法拥军的观念，进一步加大拥军优抚安置政策落实力度，推动军人成为全社会尊崇的职业。加大对相关服务行业窗口落实军人依法优先情况检查力度，推动军人乘坐公共交通工具优先、优惠、部分免费和参观社会开放场所免费等政策出台落地，结合实际健全完善军人配偶子女就业安置、优待入学等社会保障制度。热情关心关爱优抚对象，及时足额兑现各项待遇，开展走访慰问、送慰问信、挂光荣牌、贴新春楹联年画等活动，对在革命战争和社会主义建设中作出突出贡献的优抚对象要重点慰问，同时积极帮助下岗失业和遭遇自然灾害、患重大疾病等优抚对象解决实
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="font-weight-bold">四、扎实抓好各项政策待遇落实。</span>各地各部门要牢固树立依法拥军的观念，进一步加大拥军优抚安置政策落实力度，推动军人成为全社会尊崇的职业。加大对相关服务行业窗口落实军人依法优先情况检查力度，推动军人乘坐公共交通工具优先、优惠、部分免费和参观社会开放场所免费等政策出台落地，结合实际健全完善军人配偶子女就业安置、优待入学等社会保障制度。热情关心关爱优抚对象，及时足额兑现各项待遇，开展走访慰问、送慰问信、挂光荣牌、贴新春楹联年画等活动，对在革命战争和社会主义建设中作出突出贡献的优抚对象要重点慰问，同时积极帮助下岗失业和遭遇自然灾害、患重大疾病等优抚对象解决实
                     际问题，倾心为优抚对象解难题、办实事，切实把党和政府的关心关爱送到他们心坎上。</p>
             </div>
 
