--- a/src/main/resources/templates/news/new10.html
+++ b/src/main/resources/templates/news/new10.html
@@ -49,16 +49,16 @@
         <div th:replace="commons/bar::#sidebar(activeUri='main.html')"></div>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-            <div class="container">
+            <div class="container bg-light text-dark" style="font-size: 18px; font-family: 楷体">
                 <h2><a class="btn btn-sm btn-success" href="soldier" th:href="@{/main.html}">返回</a></h2>
                 <br>
                 <br>
-                <p>新华社北京10月22日电（记者罗争光）退役军人事务部22日将20名“最美退役军人”候选人名单及简要事迹进行公示，社会公众如对公示对象有异议可实事求是反映情况。</p>
-                <p>根据公示信息，20名“最美退役军人”候选人中，有参与中国海军亚丁湾护航的“北大女兵”宋玺，有替烈士尽孝的退役军人王贵武，有退伍后严守部队秘密隐姓埋名37年的一等功臣吴洪甫，有一辈子做11万多件好事的已故退役军人沈汝波，
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;新华社北京10月22日电（记者罗争光）退役军人事务部22日将20名“最美退役军人”候选人名单及简要事迹进行公示，社会公众如对公示对象有异议可实事求是反映情况。</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;根据公示信息，20名“最美退役军人”候选人中，有参与中国海军亚丁湾护航的“北大女兵”宋玺，有替烈士尽孝的退役军人王贵武，有退伍后严守部队秘密隐姓埋名37年的一等功臣吴洪甫，有一辈子做11万多件好事的已故退役军人沈汝波，
                     有在病故后将器官捐献给5位患者的退役军人胡晨，有退役后创办电商企业并帮助大量退役军人就业创业的陈堃源……</p>
-                <p>“最美退役军人”学习宣传活动由中共中央宣传部、退役军人事务部联合部署开展，旨在推出一批积极响应党的号召、在经济社会建设各个领域取得明显成就、作出突出贡献的优秀退役军人典型,充分展示退役军人永葆本色、奋发图强的优
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;“最美退役军人”学习宣传活动由中共中央宣传部、退役军人事务部联合部署开展，旨在推出一批积极响应党的号召、在经济社会建设各个领域取得明显成就、作出突出贡献的优秀退役军人典型,充分展示退役军人永葆本色、奋发图强的优
                     秀品质和良好精神风貌,动员广大退役军人倍加珍惜荣誉、积极投身国家建设发展。</p>
-                <p>据介绍，活动开展以来，各地推荐了67名人选。按照优中选优、弘扬社会主旋律、体现军人本色的原则，主办方从中遴选了20名“最美退役军人”候选人。此次公示期限为5天，公示期间对公示对象有异议，可致电反映。</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;据介绍，活动开展以来，各地推荐了67名人选。按照优中选优、弘扬社会主旋律、体现军人本色的原则，主办方从中遴选了20名“最美退役军人”候选人。此次公示期限为5天，公示期间对公示对象有异议，可致电反映。</p>
             </div>
 
         </main>
