--- a/src/main/resources/templates/news/new11.html
+++ b/src/main/resources/templates/news/new11.html
@@ -49,35 +49,35 @@
         <div th:replace="commons/bar::#sidebar(activeUri='main.html')"></div>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-            <div class="container">
+            <div class="container bg-light text-dark" style="font-size: 18px; font-family: 楷体">
                 <h2><a class="btn btn-sm btn-success" href="soldier" th:href="@{/main.html}">返回</a></h2>
                 <br>
                 <br>
-                <p>历史背景</p>
-                <p>在苏联计划经济时期，军人的地位很高，退役军人的待遇也十分优越，普遍受到社会尊敬。苏联解体后，军人社会地位大幅度下降，退役军人生活缺乏保障。随着国家私有化政策的实施，企业自主权扩大，对接收退役军人持消极态度。许多企业由于机制存在问题，且管理不善，处于停产或半停产状态，导致失业人员增加，退役军人生活困难。加之法制不健全和政令不通，一些地方和单位无视政府的安置政策，导致数万名第二次世界大战伤残老兵和退役
+                <p class="font-weight-bold">历史背景</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在苏联计划经济时期，军人的地位很高，退役军人的待遇也十分优越，普遍受到社会尊敬。苏联解体后，军人社会地位大幅度下降，退役军人生活缺乏保障。随着国家私有化政策的实施，企业自主权扩大，对接收退役军人持消极态度。许多企业由于机制存在问题，且管理不善，处于停产或半停产状态，导致失业人员增加，退役军人生活困难。加之法制不健全和政令不通，一些地方和单位无视政府的安置政策，导致数万名第二次世界大战伤残老兵和退役
                     军人被迫走上街头，举行示威游行集会，要求联邦政府解决好他们的待遇和社会地位问题，直接影响了俄罗斯政局的稳定。</p>
-                <p>为妥善解决老兵问题和退役军人安置问题，俄罗斯联邦政府加紧完善了军人、退役军人及其家属的社会保障制度。20 世纪90 年代初期以来，俄罗斯联邦政府先后出台了一系列法律，提高了军人地位，从制度上解决了伤残老兵和退役军人的安置、待遇保障和社会地位问题。1993 年2月12 日，俄罗斯联邦（国家杜马）通过了《服过役和在内务机关服过务的人员及其家属退休（抚恤）金保障法》；1994 年12 月16 日，通过了《老战士法》；1998 年3 月6 日，
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;为妥善解决老兵问题和退役军人安置问题，俄罗斯联邦政府加紧完善了军人、退役军人及其家属的社会保障制度。20 世纪90 年代初期以来，俄罗斯联邦政府先后出台了一系列法律，提高了军人地位，从制度上解决了伤残老兵和退役军人的安置、待遇保障和社会地位问题。1993 年2月12 日，俄罗斯联邦（国家杜马）通过了《服过役和在内务机关服过务的人员及其家属退休（抚恤）金保障法》；1994 年12 月16 日，通过了《老战士法》；1998 年3 月6 日，
                     通过了《俄罗斯联邦军人地位法》，从法律层面解决伤残老兵和退役军人在待遇、安置及社会地位等方面的问题，维护了他们的切身利益。</p>
-                <p>俄罗斯现行的退役军人安置管理机构是在1994年11 月25 日联邦政府第1300 号命令的基础上逐步建立起来的，包括政策指导机构、政府协调机构、计划执行机构三个层级，其工作范围覆盖了退役军人安置管理工作的各个方面。</p>
-                <p>政策指导机构</p>
-                <p>对退役军人安置实施政策指导的是俄罗斯联邦总统下属的人权委员会。该委员会根据1996 年10月18 日第1457 号总统令成立，是一个议事与咨询机构，负责根据宪法和国际人权准则协助国家元首行使保障公民人权与自由的权力；完善保障公民人权与自由的机制；维护公民人
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;俄罗斯现行的退役军人安置管理机构是在1994年11 月25 日联邦政府第1300 号命令的基础上逐步建立起来的，包括政策指导机构、政府协调机构、计划执行机构三个层级，其工作范围覆盖了退役军人安置管理工作的各个方面。</p>
+                <p class="font-weight-bold">政策指导机构</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;对退役军人安置实施政策指导的是俄罗斯联邦总统下属的人权委员会。该委员会根据1996 年10月18 日第1457 号总统令成立，是一个议事与咨询机构，负责根据宪法和国际人权准则协助国家元首行使保障公民人权与自由的权力；完善保障公民人权与自由的机制；维护公民人
                     权与自由领域国家政策的基本原则；对联邦国家权力机关和联邦主体国家权力机关尊重公民人权与自由的情况进行监督。</p>
-                <p>其中，包括对退役军人及其家庭成员就业权力的情况进行监督。该委员会有权根据退役军人安置部门所反映的情况表明立场，并就保障退役军人社会及经济权力等问题，向联邦政府及联邦执行权力机关提出解决
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;其中，包括对退役军人及其家庭成员就业权力的情况进行监督。该委员会有权根据退役军人安置部门所反映的情况表明立场，并就保障退役军人社会及经济权力等问题，向联邦政府及联邦执行权力机关提出解决
                     及改进的建议。俄政府出台的两个《退役军人及家庭成员社会适应纲要》都是在该委员会的建议下制定的。</p>
-                <p>政府协调机构</p>
-                <p>对退役军人安置管理工作行使政府协调职能的是俄罗斯联邦军人社会问题委员会。该委员会根据1999 年11 月18 日国防部第1267 号命令成立，其主要职责是协调联邦执行权力机
+                <p class="font-weight-bold">政府协调机构</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;对退役军人安置管理工作行使政府协调职能的是俄罗斯联邦军人社会问题委员会。该委员会根据1999 年11 月18 日国防部第1267 号命令成立，其主要职责是协调联邦执行权力机
                     关、联邦主体执行权力机关以及社会团体解决军事改革过程中的各种社会问题。</p>
-                <p>在退役军人培训与就业问题上，该委员会负责组织制定有关退役军人及其家属社会保障问题的规范性法律文件，组织起草退役军人获得民用专业和就业的联邦级社会适应纲要，审定联邦执行权力机关提交的公民复训与社会适应大纲，跟踪调查退役军人及其家属的社会状况，代表联邦政府协调执行权力机关解决退役军
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在退役军人培训与就业问题上，该委员会负责组织制定有关退役军人及其家属社会保障问题的规范性法律文件，组织起草退役军人获得民用专业和就业的联邦级社会适应纲要，审定联邦执行权力机关提交的公民复训与社会适应大纲，跟踪调查退役军人及其家属的社会状况，代表联邦政府协调执行权力机关解决退役军
                     人的就业问题，并对联邦执行权力机关和联邦主体执行权力机关执行相关规范性法律文件的情况进行监督。</p>
-                <p>该委员会由政府一名副总理任主席，成员有政府办公厅主任、国防部副部长( 兼秘书长)、卫生和社会发展部副部长、教育和科学部第一副部长、经济发展和贸易部副部长、财政部副部长、文化和大众传媒部副部长、司法部副部长，以及其他强力部门领导人的副职。此外，国防部干部总局、教育工作总局和监察局局长也是该委员会的成员。由于该委员会的成员多是执行权力机
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;该委员会由政府一名副总理任主席，成员有政府办公厅主任、国防部副部长( 兼秘书长)、卫生和社会发展部副部长、教育和科学部第一副部长、经济发展和贸易部副部长、财政部副部长、文化和大众传媒部副部长、司法部副部长，以及其他强力部门领导人的副职。此外，国防部干部总局、教育工作总局和监察局局长也是该委员会的成员。由于该委员会的成员多是执行权力机
                     关的分管领导和相关业务部门主管领导，并由政府副总理担任主席，可实施有效的立法保障及行政协调。</p>
-                <p>计划执行机构</p>
-                <p>在执行环节，退役军人相关机构分联邦和地区两级。在联邦一级，负责退役军人安置管理工作的联邦执行权力机关主要有：国防部、教育和科学部、卫生和社会发展部、国家高等教育委员会、国家老战士事务局，以及立法规定有兵役义务的其他权力部门。这些机关主要负责出台本部门的规范性法律文件，确定开展退役军人职业定向工作的办法，以及在下属部门中落实退役军人职业定向、培训、就业和社会适应任务的协作方法，指导所属部门（系统）贯彻政府有关军人退役保障的各项政策。必要时，这些部门可联合
+                <p class="font-weight-bold">计划执行机构</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在执行环节，退役军人相关机构分联邦和地区两级。在联邦一级，负责退役军人安置管理工作的联邦执行权力机关主要有：国防部、教育和科学部、卫生和社会发展部、国家高等教育委员会、国家老战士事务局，以及立法规定有兵役义务的其他权力部门。这些机关主要负责出台本部门的规范性法律文件，确定开展退役军人职业定向工作的办法，以及在下属部门中落实退役军人职业定向、培训、就业和社会适应任务的协作方法，指导所属部门（系统）贯彻政府有关军人退役保障的各项政策。必要时，这些部门可联合
                     起草退役军人社会适应纲要，并提交俄联邦政府审议，待批准后分别负责在本部门的贯彻落实。</p>
-                <p>国防部。在军人退役培训与就业工作中发挥着主导作用，是退役公民社会适应纲要的主要制订与协调机构，负责制定拟退役军人及其家庭成员培训方法及条件细则，主要任务是依据法律制定落实退役军人社会保障的专项计划，并会同有关部门组织退役军人的专业培训、协调就业和社会保障等问题。2008 年，俄罗斯开始实施“新面貌”改革，计划在2012 年时裁军近14 万人，并加大对退役军人的保障力度。在国家、社会支持下，动用自身力量和手段，向退役军人提供应有的社会保障，帮助其解决职业选择、民用专业培训、社会生活适应及工作安置问题。在国防部职权范围内，力所能及地提供退役相关政策、劳动力市场需求信息通报和咨询；组织民用专业职业技能培训；对需房户提供住房保障；提供后勤保障（保障被装物品、免费乘车去选择的居住地和托运个人物品）；提供一次性补助保障、确定
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;国防部。在军人退役培训与就业工作中发挥着主导作用，是退役公民社会适应纲要的主要制订与协调机构，负责制定拟退役军人及其家庭成员培训方法及条件细则，主要任务是依据法律制定落实退役军人社会保障的专项计划，并会同有关部门组织退役军人的专业培训、协调就业和社会保障等问题。2008 年，俄罗斯开始实施“新面貌”改革，计划在2012 年时裁军近14 万人，并加大对退役军人的保障力度。在国家、社会支持下，动用自身力量和手段，向退役军人提供应有的社会保障，帮助其解决职业选择、民用专业培训、社会生活适应及工作安置问题。在国防部职权范围内，力所能及地提供退役相关政策、劳动力市场需求信息通报和咨询；组织民用专业职业技能培训；对需房户提供住房保障；提供后勤保障（保障被装物品、免费乘车去选择的居住地和托运个人物品）；提供一次性补助保障、确定
                     养老金。同时，积极协助联邦中央及联邦主体有关部门对退役军人作出妥善安置，为退役军人预留工作岗位。</p>
-                <p>教育和科技部、国家高等教育委员会。负责制定政策，由高等及中等职业教育机构为退役军人及其家庭成员提供职业教育，为正在服役的合同制军人不脱产接受在职职业教育创造条件。根据国防部等部门提供的军人退役信息，指导相应高等或中等院校为军人接受学历教育预留招生名额，与军队和国家就业部门协作，组织对拟退役军人和已退役军人及其家庭成员的职业培训。</p>
-                <p>国家老战士事务局。根据1994 年通过的《老战士法》，俄罗斯联邦政府建立了国家老战士事务局，专门系统解决伤残老兵和退役军人在待遇、安置及社会地位等方面的问题。国家老战士事务局的职责主要体现在以下三个方面：一是制定并执行国家和地方老战士社会保护的专门计划，老战士及其家庭成员规定的权利和优惠的落实；二是从联邦预算、俄罗斯联邦主体预算和地方预算中拨出落实上述计划所必需的资金；三是依靠大众传媒，有目的地宣传服役和劳动的重要性，提高荣获军功和劳动功绩人员的社会威望。目前，国家老战士事务局已经成为俄罗斯安置管理退役军人的主要执行机构，其编成、结构及其建立和活动的程序，由总统按照俄罗斯联邦政府的报告确定，并受俄罗斯联邦执行权力机关、俄罗斯联邦有关主体权力机关及地方自治机关的领导。</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;教育和科技部、国家高等教育委员会。负责制定政策，由高等及中等职业教育机构为退役军人及其家庭成员提供职业教育，为正在服役的合同制军人不脱产接受在职职业教育创造条件。根据国防部等部门提供的军人退役信息，指导相应高等或中等院校为军人接受学历教育预留招生名额，与军队和国家就业部门协作，组织对拟退役军人和已退役军人及其家庭成员的职业培训。</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;国家老战士事务局。根据1994 年通过的《老战士法》，俄罗斯联邦政府建立了国家老战士事务局，专门系统解决伤残老兵和退役军人在待遇、安置及社会地位等方面的问题。国家老战士事务局的职责主要体现在以下三个方面：一是制定并执行国家和地方老战士社会保护的专门计划，老战士及其家庭成员规定的权利和优惠的落实；二是从联邦预算、俄罗斯联邦主体预算和地方预算中拨出落实上述计划所必需的资金；三是依靠大众传媒，有目的地宣传服役和劳动的重要性，提高荣获军功和劳动功绩人员的社会威望。目前，国家老战士事务局已经成为俄罗斯安置管理退役军人的主要执行机构，其编成、结构及其建立和活动的程序，由总统按照俄罗斯联邦政府的报告确定，并受俄罗斯联邦执行权力机关、俄罗斯联邦有关主体权力机关及地方自治机关的领导。</p>
             </div>
 
         </main>
