--- a/src/main/resources/templates/news/new12.html
+++ b/src/main/resources/templates/news/new12.html
@@ -49,38 +49,27 @@
         <div th:replace="commons/bar::#sidebar(activeUri='main.html')"></div>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-            <div class="container">
+            <div class="container bg-light text-dark" style="font-size: 18px; font-family: 楷体">
                 <h2><a class="btn btn-sm btn-success" href="soldier" th:href="@{/main.html}">返回</a></h2>
                 <br>
                 <br>
-                <p>加拿大自成立以来，累计有230 多万公民服役。加拿大退役军人事务部（以下简称VAC）将退役军人及其家属的健康和福祉放在首位，
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;加拿大自成立以来，累计有230 多万公民服役。加拿大退役军人事务部（以下简称VAC）将退役军人及其家属的健康和福祉放在首位，
                     针对退役军人的福利项目非常多，体现了对退役军人的极大尊重和对其所做贡献的崇高敬意。</p>
-                <p>退役军人权利</p>
-                <p>1. 信息及隐私获取权
-                    　　VAC 授权下属信息及隐私获取办公室负责信息获取法和隐私法得到执行，并确保其符合立法和政策要求。主要工作职责包括：
-                    　　(1) 处理两种法案框架内的合理请求；
-                    　　(2) 在VAC 的允许范围内，向查询信息的个人提供意见建议；
-                    　　(3) 提高两种法案的执行意识。</p>
-                <p>2. 法律援助
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;退役军人权利</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1. 信息及隐私获取权 VAC 授权下属信息及隐私获取办公室负责信息获取法和隐私法得到执行，并确保其符合立法和政策要求。主要工作职责包括： (1) 处理两种法案框架内的合理请求； (2) 在VAC 的允许范围内，向查询信息的个人提供意见建议；(3) 提高两种法案的执行意识。</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2. 法律援助
                     　　抚恤金事业局（BPA）是VAC 内部一个独特的全国性律师组织，面向那些认为对其自身残疾福利认定不公平的退役军人，为其免费提供法律帮助，该局的机构遍布加拿大的十个省和三个地区。</p>
-                <p>3. 复议和申诉
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3. 复议和申诉
                     　　当退役军人对VAC 做出的鉴定与认定不满意时，可以根据退役军人权利法案，通过退役军人审查和上诉委员会、退役军人监察专员办公室等渠道进行复议和申诉。</p>
-                <p>疾病伤残类津贴福利</p>
-                <p>择业影响津贴
-                    　　择业影响津贴(CIA) 是一项需纳税的每月福利且终生支付，老兵退役后，如果因为与服役期有关的疾病和伤病影响到择业时，就可以享受该津贴。在2017 年4 月1 日，择业影响津贴（以前被称为永久伤残津贴）引入了新的个人
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;疾病伤残类津贴福利</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;择业影响津贴 择业影响津贴(CIA) 是一项需纳税的每月福利且终生支付，老兵退役后，如果因为与服役期有关的疾病和伤病影响到择业时，就可以享受该津贴。在2017 年4 月1 日，择业影响津贴（以前被称为永久伤残津贴）引入了新的个人
                     评估因素（服役年限和收入能力的水平），作为等级水平评定的一部分，这一变化增加了一些退役军人获得更高的择业影响 津贴等级的机会。</p>
-                <p>重大伤害福利
-                    　　重大伤害福利是一项免税的一次性奖励，旨在直接解决加拿大武装部队成员所遭受的与服役相关的严重创伤或疾病。享受该福利必须满足以下条件：
-                    　　(1) 与服役相关;
-                    　　(2) 在2006 年4 月1 日（含）之后，在突发事故中所造成的结果;
-                    　　(3) 立即造成的严重伤病和对生活质量的影响。</p>
-                <p>残疾福利
-                    　　向因服役而致残的老兵支付的福利。需要有确诊的残疾状况证明并能证明残疾状况
-                    与部队服役有关。残疾福利支付方式灵活，老兵既可以选择一次性支付、每年一次的支付，或者两种支付方式相结合。</p>
-                <p>经济资助项目</p>
-                <p>2017 年6 月30 日起，加拿大上调其武装部队人员的工资和津贴（2014 年3 月31 日之后的退役军人也能受
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;重大伤害福利 重大伤害福利是一项免税的一次性奖励，旨在直接解决加拿大武装部队成员所遭受的与服役相关的严重创伤或疾病。享受该福利必须满足以下条件： (1) 与服役相关; (2) 在2006 年4 月1 日（含）之后，在突发事故中所造成的结果; (3) 立即造成的严重伤病和对生活质量的影响。</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;残疾福利 向因服役而致残的老兵支付的福利。需要有确诊的残疾状况证明并能证明残疾状况与部队服役有关。残疾福利支付方式灵活，老兵既可以选择一次性支付、每年一次的支付，或者两种支付方式相结合。</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;经济资助项目</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2017 年6 月30 日起，加拿大上调其武装部队人员的工资和津贴（2014 年3 月31 日之后的退役军人也能受
                     益，具体包括增加6.34% 的综合性收入以及5.1% 的环境和特殊津贴收入，这些收入从2017 年6月30 日开始一次性支付给退役军人）。</p>
-                <p>团体健康保险团体健康保险为符合条件的退役军人和遗属提供团体保险。参保是自愿的，也可以补充其他渠道的医疗保险。如果你有资格参加公共服务卫生保健计划，通过VAC，退役军人根据其所选择的保险类型和级别按月支付费用。公共服务卫生保健计划为各种与健康相关的产品和服务提供保险，80% 符合条件的费用会得到报销。</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;团体健康保险团体健康保险为符合条件的退役军人和遗属提供团体保险。参保是自愿的，也可以补充其他渠道的医疗保险。如果你有资格参加公共服务卫生保健计划，通过VAC，退役军人根据其所选择的保险类型和级别按月支付费用。公共服务卫生保健计划为各种与健康相关的产品和服务提供保险，80% 符合条件的费用会得到报销。</p>
             </div>
 
         </main>
