--- a/src/main/resources/templates/news/new13.html
+++ b/src/main/resources/templates/news/new13.html
@@ -49,24 +49,17 @@
         <div th:replace="commons/bar::#sidebar(activeUri='main.html')"></div>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-            <div class="container">
+            <div class="container bg-light text-dark" style="font-size: 18px; font-family: 楷体">
                 <h2><a class="btn btn-sm btn-success" href="soldier" th:href="@{/main.html}">返回</a></h2>
                 <br>
                 <br>
-                <p>
-                    很多人觉得美军是世界军队的典范，包括军人退役以后的保障，其实有时候并非如此。美国退伍军人生活艰难，不少人甚至流落街头无家可归——这不是天方夜谭，这是困扰美国政府多年的痼疾。我们不妨先看一下来自美国网站的数据：</p>
-                <p>
-                    美国死刑信息：在美国的3000余名死囚中，约300人曾在军队服役；美国2200万退伍军人中，超过120万人没有医保，约占全部人数的5%；目前美国有5万退伍军人无家可归；伊拉克战争和阿富汗战争退伍军人的年均自杀率为10万分之29.5，比平民自杀率高50%，平均每天有22人自杀身亡。
-
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;很多人觉得美军是世界军队的典范，包括军人退役以后的保障，其实有时候并非如此。美国退伍军人生活艰难，不少人甚至流落街头无家可归——这不是天方夜谭，这是困扰美国政府多年的痼疾。我们不妨先看一下来自美国网站的数据：</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;美国死刑信息：在美国的3000余名死囚中，约300人曾在军队服役；美国2200万退伍军人中，超过120万人没有医保，约占全部人数的5%；目前美国有5万退伍军人无家可归；伊拉克战争和阿富汗战争退伍军人的年均自杀率为10万分之29.5，比平民自杀率高50%，平均每天有22人自杀身亡。
                 </p>
-                <p>自2009年以来，从伊拉克和阿富汗回国后被诊断患有创伤性脑损伤等精神疾病的超过2.2万名军人因涉嫌“行为不端”被
-                    踢出美国陆军。而被“踢”出军队，就意味着这些军人不再可以享受退役军人治疗、医保或退休待遇。</p>
-                <p>这些退役回国的军人，由于多年在外战争，与社会出现脱节，因此他们的不适应症表现就越来越严重。退伍军人回国后，与社会融合度差、生活适应能力差在美国已司空见惯。</p>
-                <p>除此之外，由于战争的恐怖性和残酷性，许多美国军人在巨大压力下变得脾气暴戾，个性孤僻，回到现实社会中，又陷入就业难、家庭破裂、甚至无家可归的困境中。沉重的心理创伤
-                    常常紧随而至，难以摆脱，因而造成种种恶果。“我们对所有服役军人都有所亏欠。”美国前总统奥巴马发表演中说。</p>
-                <p>战争是把“双刃剑”，虽然美国发动伊拉克战争的初衷是为反恐，但采取以暴制暴的方式却终究是害人害己。退伍军人，特别是伤残人员已沦不美国的弱势群体，因心理创伤而酿成大量自杀悲剧仍将会在美国上演。</p>
-                <p></p>
-                <p></p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;自2009年以来，从伊拉克和阿富汗回国后被诊断患有创伤性脑损伤等精神疾病的超过2.2万名军人因涉嫌“行为不端”被 踢出美国陆军。而被“踢”出军队，就意味着这些军人不再可以享受退役军人治疗、医保或退休待遇。</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这些退役回国的军人，由于多年在外战争，与社会出现脱节，因此他们的不适应症表现就越来越严重。退伍军人回国后，与社会融合度差、生活适应能力差在美国已司空见惯。</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;除此之外，由于战争的恐怖性和残酷性，许多美国军人在巨大压力下变得脾气暴戾，个性孤僻，回到现实社会中，又陷入就业难、家庭破裂、甚至无家可归的困境中。沉重的心理创伤 常常紧随而至，难以摆脱，因而造成种种恶果。“我们对所有服役军人都有所亏欠。”美国前总统奥巴马发表演中说。</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;战争是把“双刃剑”，虽然美国发动伊拉克战争的初衷是为反恐，但采取以暴制暴的方式却终究是害人害己。退伍军人，特别是伤残人员已沦不美国的弱势群体，因心理创伤而酿成大量自杀悲剧仍将会在美国上演。</p>
             </div>
 
         </main>
