--- a/src/main/resources/templates/commons/bar.html
+++ b/src/main/resources/templates/commons/bar.html
@@ -151,7 +151,7 @@
             </li>
             <li class="nav-item">
                 <!--在Admin注册之后,这个id不会变-->
-                <a class="nav-link" href="" th:href="@{http://localhost:8769/#/instances/888afaf591f3/details}" th:target="@{http://localhost:8769/#/instances/888afaf591f3/details}">
+                <a class="nav-link" sec:authorize="hasRole('管理员')" href="" th:href="@{http://localhost:8769/#/instances/888afaf591f3/details}" th:target="@{http://localhost:8769/#/instances/888afaf591f3/details}">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                          stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                          class="feather feather-file-text">
@@ -164,20 +164,20 @@
                     系统资源
                 </a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#" sec:authorize="hasRole('退役士兵')">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                         class="feather feather-file-text">
-                        <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
-                        <polyline points="14 2 14 8 20 8"></polyline>
-                        <line x1="16" y1="13" x2="8" y2="13"></line>
-                        <line x1="16" y1="17" x2="8" y2="17"></line>
-                        <polyline points="10 9 9 9 8 9"></polyline>
-                    </svg>
-                    Year-end sale
-                </a>
-            </li>
+            <!--<li class="nav-item">-->
+                <!--<a class="nav-link" href="#" >-->
+                    <!--<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"-->
+                         <!--stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"-->
+                         <!--class="feather feather-file-text">-->
+                        <!--<path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>-->
+                        <!--<polyline points="14 2 14 8 20 8"></polyline>-->
+                        <!--<line x1="16" y1="13" x2="8" y2="13"></line>-->
+                        <!--<line x1="16" y1="17" x2="8" y2="17"></line>-->
+                        <!--<polyline points="10 9 9 9 8 9"></polyline>-->
+                    <!--</svg>-->
+                    <!--Year-end sale-->
+                <!--</a>-->
+            <!--</li>-->
         </ul>
     </div>
 </nav>
