--- a/src/main/resources/templates/news/new01.html
+++ b/src/main/resources/templates/news/new01.html
@@ -49,16 +49,16 @@
         <div th:replace="commons/bar::#sidebar(activeUri='main.html')"></div>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-            <div class="container">
+            <div class="container bg-light text-dark" style="font-size: 18px; font-family: 楷体">
                 <h2><a class="btn btn-sm btn-success" href="soldier" th:href="@{/main.html}">返回</a></h2>
                 <br>
                 <br>
-                <p>11月27日，退役军人事务部召开新闻通气会，通报退役军人和其他优抚对象信息采集工作进展情况，与媒体记者交流信息采集工作、公开宣传有关问题。</p>
-                <p>退役军人事务部新闻发言人、办公厅主任王志明同志介绍了信息采集工作总体情况。他指出，信息采集工作是深入贯彻落实习近平总书记关于退役军人工作重要指示批示精神的重要举措，对做好新时代退役军人工作具有基础性、全局性、战略性作用。部党组高度重视，部党组书记、部长孙绍骋多次作出批示，提出明确要求，成立了以钱锋副部长为组长的信息采集工作领导小组，建立了军地11个部门参与的部际联络员机制，制定了具体工作方案，
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;11月27日，退役军人事务部召开新闻通气会，通报退役军人和其他优抚对象信息采集工作进展情况，与媒体记者交流信息采集工作、公开宣传有关问题。</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;退役军人事务部新闻发言人、办公厅主任王志明同志介绍了信息采集工作总体情况。他指出，信息采集工作是深入贯彻落实习近平总书记关于退役军人工作重要指示批示精神的重要举措，对做好新时代退役军人工作具有基础性、全局性、战略性作用。部党组高度重视，部党组书记、部长孙绍骋多次作出批示，提出明确要求，成立了以钱锋副部长为组长的信息采集工作领导小组，建立了军地11个部门参与的部际联络员机制，制定了具体工作方案，
                     统一了标准要求，组织了业务培训，开展了宣传动员。目前，退役军人和其他优抚对象信息采集工作已在全国全面展开，整体进展顺利。</p>
-                <p>由于信息采集工作时间紧、任务重、要求高，各地实际工作中也遇到一些问题，一些退役军人也反映了疑惑、提出了不少意见和建议。退役军人事务部高度重视，认真梳理研究，形成常见问题解答，专门召开新闻通气会予以发布。退役军人事务部要求，数据采集工作人员要掌握工作要求，熟悉采集流程，以高度的责任感做好每一个对象的采集工作。要热情为采集对象服务，把数据采集的过程作为向广大退役军人和优抚对象传递党和国家关心关
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;由于信息采集工作时间紧、任务重、要求高，各地实际工作中也遇到一些问题，一些退役军人也反映了疑惑、提出了不少意见和建议。退役军人事务部高度重视，认真梳理研究，形成常见问题解答，专门召开新闻通气会予以发布。退役军人事务部要求，数据采集工作人员要掌握工作要求，熟悉采集流程，以高度的责任感做好每一个对象的采集工作。要热情为采集对象服务，把数据采集的过程作为向广大退役军人和优抚对象传递党和国家关心关
                     爱的过程，作为政策宣传和解释的过程，作为开展思想政治工作的过程。同时，也请广大采集对象积极配合、主动参与，共同把这件利国利军利民的好事办好。</p>
-                <p>下一步，退役军人事务部将继续加强对各地工作的指导，按照既定方案推进信息采集工作。
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;下一步，退役军人事务部将继续加强对各地工作的指导，按照既定方案推进信息采集工作。
                     退役军人和其他优抚对象信息采集工作领导小组全体成员，有关媒体记者参加了会议。</p>
             </div>
 
