--- a/src/main/resources/templates/news/new09.html
+++ b/src/main/resources/templates/news/new09.html
@@ -49,34 +49,32 @@
         <div th:replace="commons/bar::#sidebar(activeUri='main.html')"></div>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-            <div class="container">
+            <div class="container bg-light text-dark" style="font-size: 18px; font-family: 楷体">
                 <h2><a class="btn btn-sm btn-success" href="soldier" th:href="@{/main.html}">返回</a></h2>
                 <br>
                 <br>
-                <p>为深入学习贯彻习近平总书记关于退役军人工作的重要指示精神，落实全国宣传思想工作会议部署要求，加强思想政治引领，讲好退役军人故事，培育时代新人、弘扬时代新风，激发广大退役军人的自豪感、荣誉感、责
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;为深入学习贯彻习近平总书记关于退役军人工作的重要指示精神，落实全国宣传思想工作会议部署要求，加强思想政治引领，讲好退役军人故事，培育时代新人、弘扬时代新风，激发广大退役军人的自豪感、荣誉感、责
                     任感，中共中央宣传部、退役军人事务部决定在全社会广泛开展“最美退役军人”学习宣传活动。现将有关事项通知如下：</p>
                 <p>一、活动主题</p>
-                <p>全面贯彻党的十九大和十九届二中、三中全会精神，以习近平新时代中国特色社会主义思想为指导，贯彻落实全国宣传思想工作会议精神，坚持培育和践行社会主义核心价值观，广泛开展“最美退役军人”学习宣传活动，推出一批积极响应党的号召、在经济社会建设各个领域取得明显成就、作出突出贡献的优秀退役军人典型，充分展示退役军人永葆本色、奋发图强的优秀品质和良好精神风貌，动员广大退役军人倍加珍惜荣誉、积极投身国家建设发展，激励广大干部群众学习最美、争当最美，在全社会大力营造关心国防、尊崇军人浓厚氛围，营造立足岗位做贡献、建功立业新时代的时代
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;全面贯彻党的十九大和十九届二中、三中全会精神，以习近平新时代中国特色社会主义思想为指导，贯彻落实全国宣传思想工作会议精神，坚持培育和践行社会主义核心价值观，广泛开展“最美退役军人”学习宣传活动，推出一批积极响应党的号召、在经济社会建设各个领域取得明显成就、作出突出贡献的优秀退役军人典型，充分展示退役军人永葆本色、奋发图强的优秀品质和良好精神风貌，动员广大退役军人倍加珍惜荣誉、积极投身国家建设发展，激励广大干部群众学习最美、争当最美，在全社会大力营造关心国防、尊崇军人浓厚氛围，营造立足岗位做贡献、建功立业新时代的时代
                     风尚，为决胜全面建成小康社会、夺取新时代中国特色社会主义伟大胜利、实现中华民族伟大复兴的中国梦提供强大精神动力。</p>
                 <p>二、主办单位</p>
-                <p>中共中央宣传部、退役军人事务部。</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;中共中央宣传部、退役军人事务部。</p>
                 <p>三、活动安排</p>
-                <p>活动主要由广泛发动、遴选典型、公开发布、巡回报告、集中宣传、学习实践等环节组成。</p>
-                <p>(一)广泛发动。各级要层层发动，动员广大退役军人和干部群众积极参与，深入挖掘身边退役军人立足本职、干事创业的感人事迹，选树一大批先进典型，举办一系列富有仪式感的活动，推动“最美退役军人”学习
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;活动主要由广泛发动、遴选典型、公开发布、巡回报告、集中宣传、学习实践等环节组成。</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(一)广泛发动。各级要层层发动，动员广大退役军人和干部群众积极参与，深入挖掘身边退役军人立足本职、干事创业的感人事迹，选树一大批先进典型，举办一系列富有仪式感的活动，推动“最美退役军人”学习
                     宣传活动进企业、进农村、进机关、进校园、进社区、进军营、进网站，唱响主旋律，弘扬正能量。</p>
-                <p>(二)遴选典型。按照富有先进性、典型性和代表性的原则，兼顾不同类别退役军人，每省(自治区、直辖市)推荐上报2名候选人，确保政治合格、品德良好、实绩突出、群众认可，无违纪违法行为，同时提供推荐对象详细事迹资料(3000字左右)，候选人事迹应在媒体作过宣传。
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(二)遴选典型。按照富有先进性、典型性和代表性的原则，兼顾不同类别退役军人，每省(自治区、直辖市)推荐上报2名候选人，确保政治合格、品德良好、实绩突出、群众认可，无违纪违法行为，同时提供推荐对象详细事迹资料(3000字左右)，候选人事迹应在媒体作过宣传。
                     10月10日前，以各省(自治区、直辖市)党委宣传部、政府民政厅(局)、人力资源社会保障厅(局)名义，联合报送退役军人事务部。</p>
-                <p>(三)公开发布。中共中央宣传部、退役军人事务部综合各地推荐情况，遴选确定10名“最美退役军人”，举行发布仪式。中共中央宣传部、退役军人事务部有关领导，以及相关地方党委宣传部、政府民政厅(局)、人力资源
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(三)公开发布。中共中央宣传部、退役军人事务部综合各地推荐情况，遴选确定10名“最美退役军人”，举行发布仪式。中共中央宣传部、退役军人事务部有关领导，以及相关地方党委宣传部、政府民政厅(局)、人力资源
                     社会保障厅(局)负责同志和“最美退役军人”及其亲属等参加。各地可结合实际发布本地区优秀退役军人典型。</p>
-                <p>(四)巡回报告。中共中央宣传部、退役军人事务部将适时举行“最美退役军人”
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(四)巡回报告。中共中央宣传部、退役军人事务部将适时举行“最美退役军人”
                     先进事迹报告会，并组织部分“最美退役军人”分赴部分省(自治区、直辖市)的高校、企业、军营等作巡回报告。</p>
-                <p>(五)集中宣传。学习宣传活动在报纸、广播、电视、网络等全面铺开。中央和地方主要新闻媒体对学习宣传活动进行广泛报道，大力宣传“最美退役军人”先进事迹，充分报道活动动态、典型故事，形成舆论宣传声势。将“最美退役军人”纳入公益广告整体宣传，制作公益广告，广为宣传展示。充分用好用活新媒体，精选“最美退役军人”典型事
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(五)集中宣传。学习宣传活动在报纸、广播、电视、网络等全面铺开。中央和地方主要新闻媒体对学习宣传活动进行广泛报道，大力宣传“最美退役军人”先进事迹，充分报道活动动态、典型故事，形成舆论宣传声势。将“最美退役军人”纳入公益广告整体宣传，制作公益广告，广为宣传展示。充分用好用活新媒体，精选“最美退役军人”典型事
                     迹，通过网站、微信公众号、新闻客户端等向社会推出，扩大活动吸引力感染力和覆盖面影响力。</p>
-                <p>(六)学习实践。各级围绕学习宣传“最美退役军人”这一主题，结合实际开展形式多样的实践活动。灵活运用故事会、演讲会、报告会、交流会和典型访谈、文艺表演、微课堂、微视频等多种形式，讲感人故事、谈学习心得、话使命责任，引导广大退役军人和干部群众不断从先进典型身上汲取精神营养，把“最美退役军人”学习宣传活动焕发
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(六)学习实践。各级围绕学习宣传“最美退役军人”这一主题，结合实际开展形式多样的实践活动。灵活运用故事会、演讲会、报告会、交流会和典型访谈、文艺表演、微课堂、微视频等多种形式，讲感人故事、谈学习心得、话使命责任，引导广大退役军人和干部群众不断从先进典型身上汲取精神营养，把“最美退役军人”学习宣传活动焕发
                     的政治热情转化为投身国家建设发展的实际行动，进一步提振实现中国梦强军梦的精气神。</p>
-                <p>中共中央宣传部     退役军人事务部
-
-                    　　2018年9月8日  </p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;----中共中央宣传部     退役军人事务部 2019年1月8日  </p>
             </div>
 
         </main>
